--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,259 @@
-.aider*
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# PyBuilder
+target/
+
+# dotenv
+.env
+.env.*
+
+
+# virtualenv
+.venv/
+venv/
+ENV/
+env.bak/
+env/
+.venv/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pycharm IDE files
+.idea/
+
+# VS Code IDE files
+.vscode/
+
+# TypeScript
+node_modules/
+lib/
+*.log
+*.tsbuildinfo
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# TypeScript compiled output
+dist/
+out/
+*.js
+*.jsx
+*.js.map
+*.jsx.map
+
+# TypeScript declaration files
+*.d.ts
+
+# Optional GCP environment variables file
+.env.yaml
+
+# MacOS files
+.DS_Store
+
+# Linux files
+*~
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Windows shortcuts
+*.lnk
+
+# Coverage directories used by tools like istanbul
+coverage/
+*.lcov
+
+# lock files
+package-lock.json
+yarn.lock
+
+# Parcel cache
+.cache/
+
+# Storybook
+out/
+.storybook/
+
+# SvelteKit
+.svelte-kit/
+
+# Webpack
+.cache/
+.legacy/
+
+# Cypress
+.cypress/
+cypress/videos/
+cypress/screenshots/
+cypress/downloads/
+
+# Jest
+coverage/
+*.snap
+jest.config.js
+
+# IntelliJ
+.idea/
+
+# Next.js
+.next/
+
+# Nuxt.js
+.nuxt/
+
+# VuePress
+.vuepress/dist
+
+# Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
+.grunt/
+
+# Bower dependency directory (https://bower.io/)
+bower_components/
+
+# Compiled dynamic libraries
+*.dll
+*.so
+*.dylib
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+
+# Sapper
+__sapper__/
+sapper.*.log
+
+# Gridsome
+.gridsome/
+
+# Vim temporary files
+*.swp
+*.swo
+*.swn
+
+# Vercel
+.vercel/
+
+# Serverless Framework
+.serverless/
+
+# Snowpack
+.snowpack/
+
+# Compiled output for TypeScript
+dist/
+node_modules/
+tsconfig.tsbuildinfo
