--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "quipu-sdk"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
 authors = ["obahamonde <oscarmartinbahamondemunoz@gmail.com>"]
 readme = "README.md"
@@ -9,8 +9,12 @@ readme = "README.md"
 python = "^3.10"
 httpx = "^0.27.0"
 pydantic = "^2.7.3"
-pytest = {extras = ["mocker"], version = "^8.2.2"}
 
+
+
+[tool.poetry.group.dev.dependencies]
+pytest-asyncio = "^0.23.7"
+pytest = {extras = ["mocker"], version = "^8.2.2"}
 
 [build-system]
 requires = ["poetry-core"]
