--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,8 +3,8 @@ name: Publish Python Package
 on:
   push:
     branches:
-      - main  # or specify the branch you want to trigger the action
-
+      - main  
+      
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -32,7 +32,7 @@ jobs:
       - name: Build package
         run: poetry build
 
-      - name: Publish to PyPI
+       - name: Publish to PyPI
         env:
-          PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
-        run: poetry publish --build
+          POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
+        run: poetry publish --build --username __token__ --password $POETRY_PYPI_TOKEN_PYPI
