--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,4 +35,4 @@ jobs:
       - name: Publish to PyPI
         env:
           POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
-        run: poetry publish --build --username __token__ --password $POETRY_PYPI_TOKEN_PYPI
+        run: poetry publish --username __token__ --password $POETRY_PYPI_TOKEN_PYPI
